# DatalinkByIP

data/: file.txt
doc/: Readme.md
src/client/: CMakeLists.txt
src/main/: client.cpp  server.cpp
src/server/: CMakeLists.txt
src/transport_packet/: ack_packet.cpp  ack_packet.h  base_packet.cpp  base_packet.h  data_packet.cpp  data_packet.h
src/transport_packet/headers/: link_header.cpp  link_header.h  packet_header.h
src/transport_packet/utils/: checksum_calculator.cpp  checksum_calculator.h  packet_manager.cpp  packet_manager.h  packet_parser.cpp  packet_parser.h
src/transport_protocols/: rdt_strategy.cpp  rdt_strategy.h
src/transport_protocols/sr_protocol/: selective_repeat.cpp  selective_repeat.h  sr_client.cpp  sr_client.h  sr_server.cpp  sr_server.h
src/utils/: config.h  constants.h  pkt_send_status.h  port_handler.cpp  port_handler.h
test/: dkhdrtest.cpp
